Bug 207855 - Fix regression in NSURLSessionWebSocketTask WSS support
Summary: Fix regression in NSURLSessionWebSocketTask WSS support
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-02-17 13:33 PST by youenn fablet
Modified: 2020-02-17 15:46 PST (History)
4 users (show)

See Also:


Attachments
Patch (8.20 KB, patch)
2020-02-17 13:40 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Patch (8.24 KB, patch)
2020-02-17 13:45 PST, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2020-02-17 13:33:02 PST
Fix regression in NSURLSessionWebSocketTask WSS support
Comment 1 youenn fablet 2020-02-17 13:40:51 PST
Created attachment 390969 [details]
Patch
Comment 2 youenn fablet 2020-02-17 13:45:57 PST
Created attachment 390971 [details]
Patch
Comment 3 WebKit Commit Bot 2020-02-17 15:44:43 PST
The commit-queue encountered the following flaky tests while processing attachment 390971 [details]:

editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2020-02-17 15:45:21 PST
Comment on attachment 390971 [details]
Patch

Clearing flags on attachment: 390971

Committed r256787: <https://trac.webkit.org/changeset/256787>
Comment 5 WebKit Commit Bot 2020-02-17 15:45:22 PST
All reviewed patches have been landed.  Closing bug.
Comment 6 Radar WebKit Bug Importer 2020-02-17 15:46:16 PST
<rdar://problem/59529608>